--- a/index.html
+++ b/index.html
@@ -793,3 +793,48 @@
   </script>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Download Snakio Game</title>
+  <style>
+    body {
+      background-color: #111;
+      color: white;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+
+    h1 {
+      font-size: 40px;
+      margin-bottom: 30px;
+    }
+
+    button {
+      font-size: 18px;
+      padding: 15px 30px;
+      background-color: limegreen;
+      border: none;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background-color: green;
+    }
+  </style>
+</head>
+<body>
+  <h1>Get Snakio Game</h1>
+  <p>Click below to download the game and play it on your computer!</p>
+  <br>
+  <a href="https://example.com/Snakio.zip" download>
+    <button>Download Snakio</button>
+  </a>
+</body>
+</html>
